--- a/literature/literature.bib
+++ b/literature/literature.bib
@@ -915,6 +915,17 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Year                     = {2006}
 }
 
+@TechReport{Godby-2015,
+  Title                    = {{Common Ground: Exploring Compatibilities Between the Linked Data Models of the Library of Congress and OCLC}},
+  Author                   = {{Godby, Carol Jean and Denenberg, Ray}},
+  Institution              = {Library of Congress},
+  Year                     = {2015},
+  Month                    = {January},
+  Note                     = {\url{http://www.oclc.org/research/publications/2015/oclcresearch-loc-linked-data-2015.html}},
+
+  Url                      = {http://www.oclc.org/research/publications/2015/oclcresearch-loc-linked-data-2015.html}
+}
+
 @Article{Gomez-Perez2001,
   Title                    = {{Evaluation of Ontologies}},
   Author                   = {Gómez-Pérez, Asunción},
@@ -1048,6 +1059,18 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Keywords                 = {description logic rule semantic},
   Timestamp                = {2007-11-11T03:34:38.000+0100},
   Url                      = {http://www.w3.org/Submission/SWRL}
+}
+
+@TechReport{ISO/IEC-2006,
+  Title                    = {{ISO/IEC 19757-3:2006 - Information Technology — Document Schema Definition Languages (DSDL) - Part 3: Rule-Based Validation - Schematron}},
+  Author                   = {{International Organization for Standardization (ISO) and International Electrotechnical Commission (IEC)}},
+  Institution              = {International Organization for Standardization (ISO) and International Electrotechnical Commission (IEC)},
+  Year                     = {2006},
+  Month                    = {June},
+  Note                     = {\url{http://standards.iso.org/ittf/PubliclyAvailableStandards/c040833_ISO_IEC_19757-3_2006(E).zip}},
+  Type                     = {{International Organization for Standardization (ISO) and International Electrotechnical Commission (IEC) Specification}},
+
+  Url                      = {http://standards.iso.org/ittf/PubliclyAvailableStandards/c040833_ISO_IEC_19757-3_2006(E).zip}
 }
 
 @InProceedings{Jain-2010,
@@ -1219,11 +1242,67 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Editor                   = {Lehmann, Jens and V{\"{o}}lker, Johanna}
 }
 
+@Article{Kroeger-2013,
+  Title                    = {{The Road to BIBFRAME: The Evolution of the Idea of Bibliographic Transition into a Post-MARC Future}},
+  Author                   = {Kroeger, Angela},
+  Journal                  = {{Cataloging \& Classification Quarterly}},
+  Year                     = {2013},
+  Number                   = {8},
+  Pages                    = {873-890},
+  Volume                   = {51},
+
+  Doi                      = {10.1080/01639374.2013.823584},
+  Eprint                   = { 
+ http://dx.doi.org/10.1080/01639374.2013.823584
+ 
+},
+  Url                      = { 
+ http://dx.doi.org/10.1080/01639374.2013.823584
+ 
+}
+}
+
 @InProceedings{Kupfer2007,
   Title                    = {{Methods for a Synchronised Evolution of Databases and Associated Ontologies}},
   Author                   = {Kupfer, Andreas and Eckstein, Silke and Störmann, Britta and Neumann, Karl and Mathiak, Brigitte},
   Booktitle                = {{Proceedings of the 2007 Conference on Databases and Information Systems IV}},
   Year                     = {2007}
+}
+
+@TechReport{DCMI-Bibframe-Authorities-2014,
+  Title                    = {{BIBFRAME Authorities}},
+  Author                   = {{Library of Congress}},
+  Institution              = {Library of Congress},
+  Year                     = {2014},
+  Month                    = {April},
+  Note                     = {\url{http://www.loc.gov/bibframe/docs/bibframe-authorities.html}},
+  Type                     = {{Library of Congress Draft Specification}},
+
+  Url                      = {http://www.loc.gov/bibframe/docs/bibframe-authorities.html}
+}
+
+@TechReport{DCMI-Bibframe-Profiles-2014,
+  Title                    = {{BIBFRAME Profiles: Introduction and Specification}},
+  Author                   = {{Library of Congress}},
+  Institution              = {Library of Congress},
+  Year                     = {2014},
+  Month                    = {May},
+  Note                     = {\url{http://www.loc.gov/bibframe/docs/bibframe-profiles.html}},
+  Type                     = {{Library of Congress Draft}},
+
+  Url                      = {http://www.loc.gov/bibframe/docs/bibframe-profiles.html}
+}
+
+@TechReport{DCMI-Bibframe-Relationships-2014,
+  Title                    = {{BIBFRAME Relationships}},
+  Author                   = {{Library of Congress}},
+  Institution              = {Library of Congress},
+  Year                     = {2014},
+  Month                    = {April},
+  Note                     = {\url{http://www.loc.gov/bibframe/docs/bibframe-relationships.html}},
+  Type                     = {{Library of Congress Draft Specification}},
+
+  Url                      = {http://www.loc.gov/bibframe/docs/bibframe-relationships.html}
 }
 
 @InProceedings{Lohmann2008,
@@ -1312,6 +1391,30 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Type                     = {{W3C Recommendation}},
 
   Url                      = {\url{http://www.w3.org/TR/2009/REC-skos-reference-20090818/}}
+}
+
+@TechReport{Miller-2012,
+  Title                    = {{Bibliographic Framework as a Web of Data: Linked Data Model and Supporting Services}},
+  Author                   = {{Miller, Eric and Ogbuji, Uche and Mueller, Victoria and MacDougall, Kathy}},
+  Institution              = {Library of Congress},
+  Year                     = {2012},
+
+  Address                  = {Washington, DC, USA},
+  Month                    = {November},
+  Note                     = {\url{http://www.loc.gov/bibframe/pdf/marcld-report-11-21-2012.pdf}},
+
+  Url                      = {http://www.loc.gov/bibframe/pdf/marcld-report-11-21-2012.pdf}
+}
+
+@TechReport{Miller-2001,
+  Title                    = {{RDF Squish Query Language and Java Implementation}},
+  Author                   = {Miller, Libby},
+  Year                     = {2001},
+  Month                    = {February},
+  Note                     = {\url{http://ilrt.org/discovery/2001/02/squish/}},
+  Type                     = {{Draft}},
+
+  Url                      = {http://ilrt.org/discovery/2001/02/squish/}
 }
 
 @TechReport{Minsky-1974,
