--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -1154,7 +1154,7 @@ In this section, we present current languages for RDF constraint formulation and
 \emph{DCMI RDF-AP}: \url{http://dublincore.org/documents/singapore-framework},
 \emph{Bibframe}: \url{http://bibframe.org},
 \emph{DSP}: \url{http://dublincore.org/documents/dc-dsp},
-\emph{RDF Schemarama}: \url{http://swordfish.rdfweb.org/discovery/2001/01/schemarama}
+\emph{RDF Schemarama}: \url{http://www.xml.com/pub/a/2001/02/07/schemarama.html}
 %\emph{Schematron}: \url{http://www.schematron.com},
 %\emph{XML Schema}: \url{http://www.w3.org/TR/xmlschema-1},
 }.
@@ -1172,18 +1172,16 @@ and uses SPARQL to specify logical constraints and inference rules \cite{Fuerber
 
 The \emph{Dublin Core Application Profile (DCAP)} and \emph{Bibframe} are approaches to specify \emph{profiles} for application-specific purposes. The term \emph{profile} is widely used to refer to a document that describes how standards or specifications are deployed to support the requirements of a particular application, function, community, or context. In the metadata community, the term \emph{application profile} has been applied to describe the tailoring of standards for specific applications. A \emph{Dublin Core Application Profile (DCAP)} \cite{DCMI-DCAP-2009} defines metadata records which meet specific application needs while providing semantic interoperability with other applications on the basis of globally defined vocabularies and models. The \emph{Singapore Framework for Dublin Core Application Profiles} \cite{DCMI-Singapore-2008} is a framework for designing metadata and for defining DCAPs. The framework comprises descriptive components that are necessary or useful for documenting DCAPs.
 
-The \emph{DCMI Abstract Model} \cite{DCMI-Abstract-Model-2007} is required for formalizing a notion of machine-processable application profiles. It specifies an abstract model for Dublin Core metadata which is independent of any particular encoding syntax. Its primary purpose is to specify the components used in Dublin Core metadata. Nilsson et al. \cite{DCMI-DC-RDF-2008} depict how the constructs of the DCMI Abstract Model are represented using the abstract syntax of the RDF model. A \emph{Description Set Profile (DSP)} \cite{DCMI-DSP-2008} is a generic constraint language which is used to formally specify structural constraints on sets of resource descriptions within an application profile. DSP constrains resources that may be described by descriptions in a description set, the properties that may be used, and the values properties may point to. The \emph{Bibliographic Framework Initiative (Bibframe)} defines a vocabulary which has a strong overlap with DSP.
+The \emph{DCMI Abstract Model} \cite{DCMI-Abstract-Model-2007} is required for formalizing a notion of machine-processable application profiles. It specifies an abstract model for Dublin Core metadata which is independent of any particular encoding syntax. Its primary purpose is to specify the components used in Dublin Core metadata. Nilsson et al. \cite{DCMI-DC-RDF-2008} depict how the constructs of the DCMI Abstract Model are represented using the abstract syntax of the RDF model. A \emph{Description Set Profile (DSP)} \cite{DCMI-DSP-2008} is a generic constraint language which is used to formally specify structural constraints on sets of resource descriptions within an application profile. DSP constrains resources that may be described by descriptions in a description set, the properties that may be used, and the values properties may point to. \emph{BIBFRAME} \cite{Kroeger-2013,Godby-2015,Miller-2012} is the result of the \emph{Bibliographic Framework Initiative} and defines a vocabulary \cite{DCMI-Bibframe-Authorities-2014,DCMI-Bibframe-Relationships-2014} which has a strong overlap with DSP. \emph{BIBFRAME Profiles} \cite{DCMI-Bibframe-Profiles-2014} are essentially identical to DCAPs.
 
-\emph{RDF Schemarama} 
-is a proof-of-concept demonstrator based on ideas from \emph{Schematron}. 
-It allows to check that RDF data has required properties and
-it is based on \emph{Squish}, an SQL-ish query language for RDF, instead of \emph{SPARQL}. 
+\emph{Schemarama} is a validation technique for specifying the types of sub-graphs you want to have connected to a particular set of nodes in an RDF Graph. Schemarama allows to check that RDF data has required properties. Schemarama is based on Schematron \cite{ISO/IEC-2006}, an XML schema and XML structure validation language which works by finding tree patterns within an XML document. Schemarama is also based on the \emph{Squish RDF Query language} \cite{Miller-2001}, an SQL-like query language for RDF, instead of SPARQL. 
+
 %
 %\emph{Schematron} is an ISO standard for the validation and quality control of XML documents based on XPath and XSLT. 
 %
 %\emph{XML Schema} is the primary technology for specifying and constraining the structure of XML documents.
 
-In addition to the formulation of constraints, \emph{SPIN} (open source API), \emph{Stardog ICV} (as part of the \emph{Stardog RDF database}), \emph{DQTP} (tests), \emph{Pellet ICV} (extension of \emph{Pellet OWL 2 DL} reasoner) and \emph{ShEx} offer executable validation systems using \emph{SPARQL} as implementation language.
+In addition to the formulation of constraints, SPIN (open source API), Stardog ICV (as part of the Stardog RDF database), DQTP (tests), Pellet ICV (extension of Pellet OWL 2 DL reasoner) and ShEx offer executable validation systems using SPARQL as implementation language.
 
 \tb{SHACL}
 
