--- a/literature/literature.bib
+++ b/literature/literature.bib
@@ -188,6 +188,18 @@
   Url                      = {http://arxiv.org/abs/1404.1270}
 }
 
+@TechReport{W3C-SHACL-2-2015,
+  Title                    = {{Core SHACL Semantics}},
+  Author                   = {Boneva, Iovka and Prud'hommeaux, Eric},
+  Institution              = {W3C},
+  Year                     = {2015},
+  Month                    = {July},
+  Note                     = {http://w3c.github.io/data-shapes/semantics/},
+  Type                     = {{W3C Editor's Draft}},
+
+  Utl                      = {http://w3c.github.io/data-shapes/semantics/}
+}
+
 @TechReport{Bos-1997,
   Title                    = {{The XML Data Model}},
   Author                   = {Bos, Bert},
@@ -974,7 +986,7 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
 
   Owner                    = {Thomas},
   Timestamp                = {2014.05.03},
-  Url                      = {\url{http://www.w3.org/TR/2013/REC-sparql11-query-20130321/}}
+  Url                      = {http://www.w3.org/TR/2013/REC-sparql11-query-20130321/}
 }
 
 @TechReport{W3C-RDF1.1-Semantics-2014,
@@ -1175,6 +1187,18 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   ISBN                     = {978-3-540-48287-1},
   Language                 = {English},
   Url                      = {http://dx.doi.org/10.1007/11914853_56}
+}
+
+@TechReport{W3C-SHACL-2015,
+  Title                    = {{Shapes Constraint Language (SHACL)}},
+  Author                   = {Knublauch, Holger},
+  Institution              = {W3C},
+  Year                     = {2015},
+  Month                    = {July},
+  Note                     = {http://w3c.github.io/data-shapes/shacl/},
+  Type                     = {{W3C Editor's Draft}},
+
+  Utl                      = {http://w3c.github.io/data-shapes/shacl/}
 }
 
 @TechReport{W3C-SPIN-2011,
@@ -1750,6 +1774,18 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Url                      = {http://dublincore.org/documents/2007/06/04/abstract-model/}
 }
 
+@TechReport{W3C-SHACL-3-2015,
+  Title                    = {{SHACL-SPARQL}},
+  Author                   = {Prud'hommeaux, Eric},
+  Institution              = {W3C},
+  Year                     = {2015},
+  Month                    = {July},
+  Note                     = {http://w3c.github.io/data-shapes/semantics/SPARQL},
+  Type                     = {{W3C Editor's Draft}},
+
+  Utl                      = {http://w3c.github.io/data-shapes/semantics/SPARQL}
+}
+
 @TechReport{W3C-ShEx-Primer-2014,
   Title                    = {{Shape Expressions 1.0 Primer}},
   Author                   = {Prud'hommeaux, Eric},
@@ -1941,7 +1977,7 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Interhash                = {0ca86ce97135e60d6f2fa543e2a3b519},
   Intrahash                = {a04a2b5243d79beab714a0caa7750ceb},
   Timestamp                = {2011-12-12T19:00:57.000+0100},
-  Url                      = {\url{http://www.w3.org/TR/2009/REC-owl2-rdf-based-semantics-20091027/}},
+  Url                      = {http://www.w3.org/TR/2009/REC-owl2-rdf-based-semantics-20091027/},
   Username                 = {gergie}
 }
 
