--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -1144,37 +1144,23 @@ property & $\top$ & authorOf & - & - & irreflexive property & - \\
 
 \section{Related Work}
 
-In this section, we present current languages for RDF constraint formulation and RDF data validation\footnote{
-\emph{SPARQL}: \url{http://www.w3.org/TR/sparql11-query}, 
-\emph{SPIN}: \url{http://spinrdf.org},
-\emph{Pellet ICV}: \url{http://clarkparsia.com/pellet/icv},
-\emph{Stardog ICV}: \url{http://docs.stardog.com/#_validating_constraints},
-\emph{ShEx}: \url{http://www.w3.org/Submission/shex-defn},
-\emph{ReSh}: \url{http://www.w3.org/Submission/shapes},
-\emph{DCMI RDF-AP}: \url{http://dublincore.org/documents/singapore-framework},
-\emph{Bibframe}: \url{http://bibframe.org},
-\emph{DSP}: \url{http://dublincore.org/documents/dc-dsp},
-\emph{RDF Schemarama}: \url{http://www.xml.com/pub/a/2001/02/07/schemarama.html}
-%\emph{Schematron}: \url{http://www.schematron.com},
-%\emph{XML Schema}: \url{http://www.w3.org/TR/xmlschema-1},
-}.
-SPIN, SPARQL, OWL 2, ShEx, ReSh, and DSP are the six most promising and mostly used constraint languages.
+In this section, we present current languages for RDF constraint formulation and RDF data validation. SPIN, SPARQL, OWL 2, ShEx, ReSh, and DSP are the six most promising and mostly used constraint languages.
 
 The \emph{SPARQL Query Language for RDF} \cite{W3C-SPARQL1.1-Query-Language-2013} is generally seen as the method of choice to validate RDF data according to certain constraints \cite{Fuerber2010}, 
 although, it is not ideal for their formulation. 
 In contrast, high-level constraint languages are comparatively easy to understand and constraints can be formulated more concisely.
-Declarative languages may be placed on top of SPARQL and SPIN when using them as implementation languages. The \emph{SPARQL Inferencing Notation (SPIN)} \cite{W3C-SPIN-2011} provides a vocabulary to represent SPARQL queries as RDF triples
+Declarative languages may be placed on top of SPARQL and SPIN when using them as implementation languages. The \emph{SPARQL Inferencing Notation (SPIN)}\footnote{\url{http://spinrdf.org}} \cite{W3C-SPIN-2011} provides a vocabulary to represent SPARQL queries as RDF triples
 and uses SPARQL to specify logical constraints and inference rules \cite{Fuerber2010}. Kontokostas et al. define 17 data quality integrity constraints represented as SPARQL query templates called \emph{Data Quality Test Patterns (DQTP)} \cite{Kontokostas2014}. 
 
-\emph{Stardog Integrity Constraint Validation (ICV)} and the \emph{Pellet Integrity Constraint Validator (ICV)} use OWL 2 constructs to formulate constraints. The Pellet ICV is a proof-of-concept extension for the OWL 2 DL reasoner \emph{Pellet} \cite{sirin2007pellet}. Stardog ICV validates RDF data stored in a Stardog database according to constraints which may be written in SPARQL, OWL 2, or SWRL \cite{Horrocks04}. 
+\emph{Stardog Integrity Constraint Validation (ICV)} and the \emph{Pellet Integrity Constraint Validator (ICV)} use OWL 2 constructs to formulate constraints. The Pellet ICV\footnote{\url{http://clarkparsia.com/pellet/icv}} is a proof-of-concept extension for the OWL 2 DL reasoner \emph{Pellet} \cite{sirin2007pellet}. Stardog ICV\footnote{\url{http://docs.stardog.com/#_validating_constraints}} validates RDF data stored in a Stardog database according to constraints which may be written in SPARQL, OWL 2, or SWRL \cite{Horrocks04}. 
 
 \emph{Shape Expressions (ShEx)} \cite{W3C-ShEx-Primer-2014,W3C-ShEx-Definition-2014,Prud'hommeaux-2014,Boneva-2014} specifies a language whose syntax and semantics are similar to regular expressions. ShEx associate RDF graphs with labeled patterns called \emph{shapes} which are used to express formal constraints on the content of RDF graphs. \emph{Resource Shapes (ReSh)} \cite{W3C-ReSh-2014} defines its own vocabulary for specifying shapes of RDF resources. Ryman, Hors, and Speicher define \emph{shape} as a description of the set of triples a resource is expected to contain and as a description of the integrity constraints those triples are required to satisfy \cite{Ryman2013}. 
 
 The \emph{Dublin Core Application Profile (DCAP)} and \emph{Bibframe} are approaches to specify \emph{profiles} for application-specific purposes. The term \emph{profile} is widely used to refer to a document that describes how standards or specifications are deployed to support the requirements of a particular application, function, community, or context. In the metadata community, the term \emph{application profile} has been applied to describe the tailoring of standards for specific applications. A \emph{Dublin Core Application Profile (DCAP)} \cite{DCMI-DCAP-2009} defines metadata records which meet specific application needs while providing semantic interoperability with other applications on the basis of globally defined vocabularies and models. The \emph{Singapore Framework for Dublin Core Application Profiles} \cite{DCMI-Singapore-2008} is a framework for designing metadata and for defining DCAPs. The framework comprises descriptive components that are necessary or useful for documenting DCAPs.
 
-The \emph{DCMI Abstract Model} \cite{DCMI-Abstract-Model-2007} is required for formalizing a notion of machine-processable application profiles. It specifies an abstract model for Dublin Core metadata which is independent of any particular encoding syntax. Its primary purpose is to specify the components used in Dublin Core metadata. Nilsson et al. \cite{DCMI-DC-RDF-2008} depict how the constructs of the DCMI Abstract Model are represented using the abstract syntax of the RDF model. A \emph{Description Set Profile (DSP)} \cite{DCMI-DSP-2008} is a generic constraint language which is used to formally specify structural constraints on sets of resource descriptions within an application profile. DSP constrains resources that may be described by descriptions in a description set, the properties that may be used, and the values properties may point to. \emph{BIBFRAME} \cite{Kroeger-2013,Godby-2015,Miller-2012} is the result of the \emph{Bibliographic Framework Initiative} and defines a vocabulary \cite{DCMI-Bibframe-Authorities-2014,DCMI-Bibframe-Relationships-2014} which has a strong overlap with DSP. \emph{BIBFRAME Profiles} \cite{DCMI-Bibframe-Profiles-2014} are essentially identical to DCAPs.
+The \emph{DCMI Abstract Model} \cite{DCMI-Abstract-Model-2007} is required for formalizing a notion of machine-processable application profiles. It specifies an abstract model for Dublin Core metadata which is independent of any particular encoding syntax. Its primary purpose is to specify the components used in Dublin Core metadata. Nilsson et al. \cite{DCMI-DC-RDF-2008} depict how the constructs of the DCMI Abstract Model are represented using the abstract syntax of the RDF model. A \emph{Description Set Profile (DSP)} \cite{DCMI-DSP-2008} is a generic constraint language which is used to formally specify structural constraints on sets of resource descriptions within an application profile. DSP constrains resources that may be described by descriptions in a description set, the properties that may be used, and the values properties may point to. \emph{BIBFRAME}\footnote{\url{http://bibframe.org}} \cite{Kroeger-2013,Godby-2015,Miller-2012} is the result of the \emph{Bibliographic Framework Initiative} and defines a vocabulary \cite{DCMI-Bibframe-Authorities-2014,DCMI-Bibframe-Relationships-2014} which has a strong overlap with DSP. \emph{BIBFRAME Profiles} \cite{DCMI-Bibframe-Profiles-2014} are essentially identical to DCAPs.
 
-\emph{Schemarama} is a validation technique for specifying the types of sub-graphs you want to have connected to a particular set of nodes in an RDF Graph. Schemarama allows to check that RDF data has required properties. Schemarama is based on Schematron \cite{ISO/IEC-2006}, an XML schema and XML structure validation language which works by finding tree patterns within an XML document. Schemarama is also based on the \emph{Squish RDF Query language} \cite{Miller-2001}, an SQL-like query language for RDF, instead of SPARQL. 
+\emph{Schemarama}\footnote{\url{http://www.xml.com/pub/a/2001/02/07/schemarama.html}} is a validation technique for specifying the types of sub-graphs you want to have connected to a particular set of nodes in an RDF Graph. Schemarama allows to check that RDF data has required properties. Schemarama is based on Schematron \cite{ISO/IEC-2006}, an XML schema and XML structure validation language which works by finding tree patterns within an XML document. Schemarama is also based on the \emph{Squish RDF Query language} \cite{Miller-2001}, an SQL-like query language for RDF, instead of SPARQL. 
 
 %
 %\emph{Schematron} is an ISO standard for the validation and quality control of XML documents based on XPath and XSLT. 
@@ -1184,6 +1170,10 @@ The \emph{DCMI Abstract Model} \cite{DCMI-Abstract-Model-2007} is required for f
 In addition to the formulation of constraints, SPIN (open source API), Stardog ICV (as part of the Stardog RDF database), DQTP (tests), Pellet ICV (extension of Pellet OWL 2 DL reasoner) and ShEx offer executable validation systems using SPARQL as implementation language.
 
 \tb{SHACL}
+
+\emph{Shapes Constraint Language (SHACL)} \cite{W3C-SHACL-2015,W3C-SHACL-2-2015,W3C-SHACL-3-2015}
+
+
 
 \section{Conclusion and Future Work}
 
