--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -1169,11 +1169,7 @@ The \emph{DCMI Abstract Model} \cite{DCMI-Abstract-Model-2007} is required for f
 
 In addition to the formulation of constraints, SPIN (open source API), Stardog ICV (as part of the Stardog RDF database), DQTP (tests), Pellet ICV (extension of Pellet OWL 2 DL reasoner) and ShEx offer executable validation systems using SPARQL as implementation language.
 
-\tb{SHACL}
-
-\emph{Shapes Constraint Language (SHACL)} \cite{W3C-SHACL-2015,W3C-SHACL-2-2015,W3C-SHACL-3-2015}
-
-
+The W3C Data Shapes Working Group currently develops \emph{SHACL} \cite{W3C-SHACL-2015,W3C-SHACL-2-2015,W3C-SHACL-3-2015}, the \emph{Shapes Constraint Language}, an RDF vocabulary for describing RDF graph structures. Some of these graph structures are captured as \emph{shapes}, which group together constraints about the same RDF nodes. Shapes provide a high-level vocabulary to identify predicates and their associated cardinalities, datatypes and other constraints. Additional constraints can be associated with shapes using SPARQL and similar executable languages. These executable languages can also be used to define new high-level vocabulary terms. SHACL shapes can be used to communicate data structures associated with some process or interface, generate or validate data, or drive user interfaces. 
 
 \section{Conclusion and Future Work}
 
