--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -1144,7 +1144,7 @@ property & $\top$ & authorOf & - & - & irreflexive property & - \\
 
 \section{Related Work}
 
-In this section, we present current languages for RDF constraint formulation and RDF data validation. SPIN, SPARQL, OWL 2, ShEx, ReSh, and DSP are the six most promising and mostly used constraint languages.
+In this section, we present current languages for RDF constraint formulation and RDF data validation. SPIN, SPARQL, OWL 2, ShEx, ReSh, and DSP are the six most promising and mostly used constraint languages. In addition, the W3C Data Shapes Working Group currently develops SHACL, an RDF vocabulary for describing RDF graph structures.
 
 The \emph{SPARQL Query Language for RDF} \cite{W3C-SPARQL1.1-Query-Language-2013} is generally seen as the method of choice to validate RDF data according to certain constraints \cite{Fuerber2010}, 
 although, it is not ideal for their formulation. 
