--- a/literature/literature.bib
+++ b/literature/literature.bib
@@ -236,10 +236,10 @@
   Year                     = {2013},
 
   Address                  = {{Rio de Janeiro, Brazil}},
+  Note                     = {\url{http://ceur-ws.org/Vol-996/}},
   Volume                   = {996},
 
-  Owner                    = {Thomas Bosch},
-  Timestamp                = {2014.11.07}
+  Url                      = {http://ceur-ws.org/Vol-996/}
 }
 
 @TechReport{BoschCyganiakWackerowZapilko2015,
@@ -247,7 +247,7 @@
   Author                   = {Bosch, Thomas and Cyganiak, Richard and Wackerow, Joachim and Zapilko, Benjamin},
   Institution              = {{DDI Alliance}},
   Year                     = {2015},
-  Note                     = {http://rdf-vocabulary.ddialliance.org/discovery},
+  Note                     = {\url{http://rdf-vocabulary.ddialliance.org/discovery}},
   Type                     = {{DDI Alliance Specification}},
 
   Owner                    = {Thomas Bosch},
@@ -278,19 +278,6 @@
 
   Owner                    = {Thomas Bosch},
   Timestamp                = {2014.11.09}
-}
-
-@Article{BoschEckert2015-3,
-  Title                    = {{A Vocabulary to Describe RDF Constraints Generically}},
-  Author                   = {Bosch, Thomas and Eckert, Kai},
-  Year                     = {2015},
-
-  Archiveprefix            = {arXiv},
-  Eprintclass              = {cs.LO},
-  Eprinttype               = {arxiv},
-  Owner                    = {Thomas Bosch},
-  Primaryclass             = {cs.LO},
-  Timestamp                = {2014.05.25}
 }
 
 @InProceedings{BoschEckert2014,
