--- a/literature/literature.bib
+++ b/literature/literature.bib
@@ -43,6 +43,17 @@
   Pages                    = {243--252}
 }
 
+@TechReport{Apache-2015,
+  Title                    = {{Apache Log4j 2 v. 2.3 User's Guide}},
+  Author                   = {{Apache Software Foundation}},
+  Institution              = {Apache Software Foundation},
+  Year                     = {2015},
+  Month                    = {May},
+  Note                     = {\url{http://logging.apache.org/log4j/2.x/log4j-users-guide.pdf}},
+
+  Url                      = {http://logging.apache.org/log4j/2.x/log4j-users-guide.pdf}
+}
+
 @TechReport{W3C-SPARQL1.1-Overview-2013,
   Title                    = {{SPARQL 1.1 Overview}},
   Author                   = {Aranda, Carlos Buil and Corby, Olivier and Das, Souripriya and Feigenbaum, Lee and Gearon, Paul and Glimm, Birte and Harris, Steve and Hawke, Sandro and Herman, Ivan and Humfrey, Nicholas and Michaelis, Nico and Ogbuji, Chimezie and Perry, Matthew and Passant, Alexandre and Polleres, Axel and Prud'hommeaux, Eric and Seaborne, Andy and Williams, Gregory Todd},
@@ -287,10 +298,8 @@
   Year                     = {2014},
 
   Address                  = {{Austin, Texas, USA}},
-  Note                     = {http://dcevents.dublincore.org/IntConf/dc-2014/paper/view/257},
+  Note                     = {\url{http://dcevents.dublincore.org/IntConf/dc-2014/paper/view/257}},
 
-  Owner                    = {Thomas Bosch},
-  Timestamp                = {2014.11.09},
   Url                      = {http://dcevents.dublincore.org/IntConf/dc-2014/paper/view/257}
 }
 
@@ -384,7 +393,10 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
 @Article{BoschNolleAcarEckert2015,
   Title                    = {{RDF Validation Requirements - Evaluation and Logical Underpinning}},
   Author                   = {Bosch, Thomas and Nolle, Andreas and Acar, Erman and Eckert, Kai},
+  Journal                  = {Computing Research Repository (CoRR)},
   Year                     = {2015},
+  Note                     = {\url{http://arxiv.org/abs/1501.03933}},
+  Volume                   = {abs/1501.03933},
 
   Archiveprefix            = {arXiv},
   Eprint                   = {cs/1501.03933},
@@ -404,6 +416,22 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
 
   Owner                    = {Thomas Bosch},
   Timestamp                = {2014.11.08}
+}
+
+@Article{Bosch-Wira-Alam-Mathiak-2014,
+  Title                    = {{Designing an Ontology for the Data Documentation Initiative}},
+  Author                   = {Thomas Bosch and
+ Andias Wira{-}Alam and
+ Brigitte Mathiak},
+  Journal                  = {Computing Research Repository (CoRR)},
+  Year                     = {2014},
+  Note                     = {\url{http://arxiv.org/abs/1402.3470}},
+  Volume                   = {abs/1402.3470},
+
+  Bibsource                = {dblp computer science bibliography, http://dblp.org},
+  Biburl                   = {http://dblp.uni-trier.de/rec/bib/journals/corr/BoschWM14},
+  Timestamp                = {Wed, 05 Mar 2014 14:43:44 +0100},
+  Url                      = {http://arxiv.org/abs/1402.3470}
 }
 
 @InProceedings{BoschWira-AlamMathiak2011,
@@ -431,7 +459,10 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
 @Article{BoschZapilkoWackerowEckert2015,
   Title                    = {{RDF Constraints to Validate Rectangular Data and Metadata on Person-Level Data, Aggregated Data, Thesauri, and Statistical Classifications}},
   Author                   = {Bosch, Thomas and Zapilko, Benjamin and Wackerow, Joachim and Eckert, Kai},
+  Journal                  = {Computing Research Repository (CoRR)},
   Year                     = {2015},
+  Note                     = {\url{http://arxiv.org/abs/1504.04479}},
+  Volume                   = {abs/1504.04479},
 
   Archiveprefix            = {arXiv},
   Eprint                   = {1504.04479},
@@ -446,7 +477,10 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
 @Article{BoschZapilkoWackerowEckert2015-2,
   Title                    = {{An Evaluation of Metadata and Data Quality on Person-Level, Aggregated, Thesauri, Statistical Classifications, and Rectangular Data Sets}},
   Author                   = {Bosch, Thomas and Zapilko, Benjamin and Wackerow, Joachim and Eckert, Kai},
+  Journal                  = {Computing Research Repository (CoRR)},
   Year                     = {2015},
+  Note                     = {\url{http://arxiv.org/abs/1504.04478}},
+  Volume                   = {abs/1504.04478},
 
   Archiveprefix            = {arXiv},
   Eprint                   = {1504.04478},
@@ -1249,7 +1283,7 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Author                   = {Markus Kr{\"{o}}tzsch and Franti{\v{s}}ek Siman{\v{c}}{\'{\i}}k and Ian Horrocks},
   Booktitle                = {{Perspectives on Ontology Learning}},
   Publisher                = {{IOS Press}},
-  Year                     = {2014},
+  Year                     = {2012},
   Editor                   = {Lehmann, Jens and V{\"{o}}lker, Johanna}
 }
 
