--- a/paper/RDF validation requirements/RDF validation requirements.tex
+++ b/paper/RDF validation requirements/RDF validation requirements.tex
@@ -4308,8 +4308,8 @@ The majority - nearly 70\% - of the overall constraints are expressible in DL.
 *Subsumption & $\sqsubseteq$ & sub-classes \\
 *Class Equivalence & $\equiv$ & equivalent classes \\
 *Sub Properties & $\sqsubseteq$ & sub-properties \\
-*Property Domain & $\exists$, $\sqsubseteq$ & property domain \\
-*Property Range & $\sqsubseteq$, $\forall$ & property range \\
+*Property Domains & $\exists$, $\sqsubseteq$ & property domain \\
+*Property Ranges & $\sqsubseteq$, $\forall$ & property range \\
 *Inverse Object Properties & inverse & inverse properties \\
 %*Symmetric Object Properties & $\equiv$, inverse & symmetric \\
 *Symmetric Object Properties & symmetric & symmetric properties \\
